deployment/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: api-gateway
    spec:
      hostAliases:
        - ip: "4.207.212.218" # Replace with your Ingress Controller's External IP
          hostnames:
            - "keycloak-domain"
      containers:
        - image: moh96/api-gateway:d09929779614a0ea9368b94ceb10524614e2238f
          imagePullPolicy: Always
          name: api-gateway
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: /.env
              name: api-gateway-cm0
              subPath: .env
          resources:
            requests:
              memory: "100Mi" # Minimum memory needed for the container
              cpu: "100m" # Minimum CPU needed for the container
            limits:
              memory: "1Gi" # Maximum memory the container can use
              cpu: "1" # Maximum CPU the container can use
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: .env
                path: .env
            name: api-gateway-cm0
          name: api-gateway-cm0
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
#     kompose.version: 1.34.0 (cbf2835db)
#   labels:
#     io.kompose.service: api-gateway
#   name: api-gateway
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: api-gateway
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
#         kompose.version: 1.34.0 (cbf2835db)
#       labels:
#         io.kompose.service: api-gateway
#     spec:
#       hostAliases:
#         - ip: "4.207.212.218" # Replace with your Ingress Controller's External IP
#           hostnames:
#             - "keycloak-domain"
#       containers:
#         - image: moh96/api-gateway:903947607645a368ad0d22dad2512a564b20f27a
#           imagePullPolicy: Always
#           name: api-gateway
#           ports:
#             - containerPort: 9000
#               protocol: TCP
#           volumeMounts:
#             - mountPath: /.env
#               name: api-gateway-cm0
#               subPath: .env
#       restartPolicy: Always
#       volumes:
#         # ConfigMap for the .env file
#         - configMap:
#             items:
#               - key: .env
#                 path: .env
#             name: api-gateway-cm0
#           name: api-gateway-cm0

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
#     kompose.version: 1.34.0 (cbf2835db)
#   labels:
#     io.kompose.service: api-gateway
#   name: api-gateway
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: api-gateway
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
#         kompose.version: 1.34.0 (cbf2835db)
#       labels:
#         io.kompose.service: api-gateway
#     spec:
#       hostAliases:
#         - ip: "4.207.212.218" # Replace with your Ingress Controller's External IP
#           hostnames:
#             - "keycloak-domain"
#       initContainers:
#         - name: import-keycloak-cert
#           image: openjdk:21
#           command:
#             - "sh"
#             - "-c"
#             - |
#               keytool -importcert -noprompt -alias keycloak -file /certs/keycloak.crt -keystore $JAVA_HOME/lib/security/cacerts -storepass changeit
#           volumeMounts:
#             - name: keycloak-certificate-volume
#               mountPath: /certs
#       containers:
#         - image: moh96/api-gateway:903947607645a368ad0d22dad2512a564b20f27a
#           imagePullPolicy: Always
#           name: api-gateway
#           ports:
#             - containerPort: 9000
#               protocol: TCP
#           volumeMounts:
#             - mountPath: /.env
#               name: api-gateway-cm0
#               subPath: .env
#       restartPolicy: Always
#       volumes:
#         - configMap:
#             items:
#               - key: .env
#                 path: .env
#             name: api-gateway-cm0
#           name: api-gateway-cm0
#         - name: keycloak-certificate-volume
#           configMap:
#             name: keycloak-certificate

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
#     kompose.version: 1.34.0 (cbf2835db)
#   labels:
#     io.kompose.service: api-gateway
#   name: api-gateway
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: api-gateway
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: C:\Users\MedBo\Documents\kompose\kompose.exe convert
#         kompose.version: 1.34.0 (cbf2835db)
#       labels:
#         io.kompose.service: api-gateway
#     spec:
#       hostAliases:
#         - ip: "4.207.212.218" # Replace with your Ingress Controller's External IP
#           hostnames:
#             - "keycloak-domain"
#       initContainers:
#         - name: import-keycloak-cert
#           image: openjdk:21
#           command:
#             - "sh"
#             - "-c"
#             - |
#               keytool -importcert -noprompt -alias keycloak -file /certs/keycloak.crt -keystore /tmp/keycloak-keystore.jks -storepass changeit
#           volumeMounts:
#             - name: keycloak-certificate-volume
#               mountPath: /certs
#             - name: keycloak-keystore-volume
#               mountPath: /tmp
#       containers:
#         - image: moh96/api-gateway:903947607645a368ad0d22dad2512a564b20f27a
#           imagePullPolicy: Always
#           name: api-gateway
#           ports:
#             - containerPort: 9000
#               protocol: TCP
#           volumeMounts:
#             - mountPath: /.env
#               name: api-gateway-cm0
#               subPath: .env
#             - mountPath: /tmp/keycloak-keystore.jks
#               name: keycloak-keystore-volume
#               subPath: keycloak-keystore.jks
#           command:
#             - "java"
#             - "-Djavax.net.ssl.trustStore=/tmp/keycloak-keystore.jks"
#             - "-Djavax.net.ssl.trustStorePassword=changeit"
#             - "-jar"
#             - "/app/application.jar" # Update this path to the correct location of your JAR file
#       restartPolicy: Always
#       volumes:
#         - configMap:
#             items:
#               - key: .env
#                 path: .env
#             name: api-gateway-cm0
#           name: api-gateway-cm0
#         - name: keycloak-certificate-volume
#           configMap:
#             name: keycloak-certificate
#         - name: keycloak-keystore-volume
#           emptyDir: {}
